src/test/ui/issues/issue-3044.rs
fn main() {
    let needlesArr: Vec<char> = vec!['a', 'f'];
    needlesArr.iter().fold(|x, y| {
    });
    //~^^ ERROR this function takes 2 parameters but 1 parameter was supplied
}
